# nomouse

./: Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: q6zcc5ia6cc8vwi14gn4d4805kq3aj0f-source
src/: app.rs  buf_utils.rs  main.rs  output_utils.rs  position_selector.rs  render_utils.rs
