[package]
name = "nomouse"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.2", features = ["client"] }
wayland-protocols = { version = "0.31", features = ["client"] }
tempfile = "3.0"
xkbcommon = "0.7"
smithay-client-toolkit = "0.19.2"
nix = { version = "0.30.1", features = ["fs", "mman"] }
nanoid = "0.4.0"
cosmic-text = "0.14.2"
